# nodemoduleskiller

./: Cargo.toml  README.md
src/: lib.rs
src/tui/: app.rs  mod.rs  render.rs
