[package]
name = "nodemoduleskiller"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["xuanphamdev"]
description = "Find and delete node_modules and friends from a fast terminal UI — a Rust port of npkill"
license = "MIT"
readme = "README.md"
repository = "https://github.com/xuanphamdev/nodemoduleskiller"
homepage = "https://github.com/xuanphamdev/nodemoduleskiller"
documentation = "https://docs.rs/nodemoduleskiller"
keywords = ["cli", "node-modules", "disk-cleanup", "tui", "developer-tools"]
categories = ["command-line-utilities", "filesystem"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "rustfmt.toml",
]

[[bin]]
name = "nmk"
path = "src/main.rs"

[lib]
name = "nodemoduleskiller"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-util = "0.7"
num_cpus = "1"
serde_json = "1"
is-terminal = "0.4"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
