[package]
name = "cruftkill"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
authors = ["xuanphamdev"]
description = "Polyglot dev-cache reaper — find and delete node_modules, .venv, target, DerivedData and the rest of your build cruft from a fast terminal UI"
license = "MIT"
readme = "README.md"
repository = "https://github.com/xuanphamdev/cruftkill"
homepage = "https://github.com/xuanphamdev/cruftkill"
documentation = "https://docs.rs/cruftkill"
keywords = ["cli", "disk-cleanup", "cache", "tui", "developer-tools"]
categories = ["command-line-utilities", "filesystem"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "rustfmt.toml",
]

[[bin]]
name = "cft"
path = "src/main.rs"

[lib]
name = "cruftkill"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-util = "0.7"
num_cpus = "1"
serde_json = "1"
is-terminal = "0.4"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# ── cargo-dist (release automation) ──────────────────────────────────────────
# `dist plan` to inspect, `dist build` to produce a local archive, or push a
# git tag matching `Cargo.toml::version` to trigger the CI release pipeline
# at `.github/workflows/release.yml`.

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
installers = ["shell", "powershell", "npm", "homebrew"]
tap = "xuanphamdev/homebrew-tap"
publish-jobs = ["npm", "homebrew"]
npm-package = "cruftkill"
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"
install-updater = false

# Faster local dev: keep the standard release profile but allow dist's
# slim hooks too.
[profile.dist]
inherits = "release"
lto = "thin"
